kubernetes/dev/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: dev
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    targetPort: 5432
    name: postgres
  selector:
    app: postgres
  type: ClusterIP
