kubernetes/dev/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: dev
  labels:
    app: redis
spec:
  ports:
  - port: 6379
    targetPort: 6379
    name: redis
  selector:
    app: redis
  type: ClusterIP
